--- a/index.html
+++ b/index.html
@@ -2,45 +2,237 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Termos de Uso</title>
     <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+
+        /* ============================
+           Estrutura base
+        ============================ */
+        html, body {
+            margin: 0;
+            padding: 0;
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            height: 100dvh;
+            overflow: hidden;
+            background-color: #000;
+        }
+
+        #background-video {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -2;
+            will-change: transform, opacity;
+            transform: translateZ(0);
+            backface-visibility: hidden;
+        }
+
+        .background-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.45);
+            backdrop-filter: blur(2px);
+            z-index: -1;
+        }
+
+        .centralizador {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100dvh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow-y: auto;
+            padding: 1rem;
+            box-sizing: border-box;
+        }
+
+        .login-container {
+            background-color: rgba(255, 255, 255, 0.6);
+            padding: 2.5rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+            width: 90%;
+            max-width: 450px;
+            text-align: center;
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .login-container * {
+            color: #333 !important;
+            opacity: 1 !important;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        h2 {
+            font-size: 2.2em;
+            margin-bottom: 2rem;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: #008000 !important;
+            font-weight: 700;
+        }
+
+        .aviso-lgpd {
+            background-color: rgba(0, 128, 0, 0.1);
+            padding: 1.5rem;
+            border-radius: 12px;
+            border-left: 6px solid #008000;
+            margin-top: 1.5rem;
+            font-size: 0.95rem;
+            line-height: 1.6;
+        }
+
+        .aviso-lgpd h3 {
+            margin: 0 0 0.8rem;
+            font-size: 1.3em;
+            color: #008000 !important;
+            font-weight: 600;
+        }
+
+        .aviso-lgpd p {
+            margin: 0 0 1rem;
+            text-align: justify;
+            color: #555 !important;
+        }
+
+        .checkbox-container {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            margin-top: 1.5rem;
+            gap: 12px;
+        }
+
+        .checkbox-container input[type="checkbox"] {
+            accent-color: #008000;
+            width: 22px;
+            height: 22px;
+            cursor: pointer;
+            border: 2px solid #008000;
+        }
+
+        .checkbox-container label {
+            font-size: 0.9em;
+            text-align: left;
+            color: #555 !important;
+            line-height: 1.4;
+            cursor: pointer;
+        }
+
+        .btn-conectar {
+            background-color: #ccc;
+            color: #fff !important;
+            border: none;
+            padding: 14px 30px;
+            border-radius: 50px;
+            font-size: 1.1em;
+            font-weight: 600;
+            cursor: not-allowed;
+            transition: all 0.4s ease;
+            margin-top: 2rem;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .btn-conectar.ativo {
+            background: linear-gradient(45deg, #008000, #006400);
+            cursor: pointer;
+        }
+
+        .btn-conectar.ativo:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+        }
+
+        .btn-conectar.ativo:active {
+            transform: translateY(0);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        @media (max-width: 768px) {
+            .login-container {
+                padding: 1.5rem;
+                max-width: 95%;
+            }
+
+            h2 {
+                font-size: 1.8em;
+                margin-bottom: 1.5rem;
+            }
+
+            .btn-conectar {
+                width: 100%;
+                padding: 12px;
+            }
+
+            .checkbox-container {
+                justify-content: center;
+            }
+        }
+    </style>
 </head>
 <body>
 
     <video autoplay muted loop id="background-video">
         <source src="cptvprtl.mp4" type="video/mp4">
     </video>
+    <div class="background-overlay"></div>
 
-    <div class="login-container">
-        <h2>São José Agroindustrial</h2>
-        
-        <div class="aviso-lgpd">
-            <h3><i class="fas fa-shield-alt"></i> Aviso de Uso da Rede Wi-Fi</h3>
-            <p>
-                Ao clicar em 'Aceitar e Conectar', você concorda com o tratamento de seus dados pessoais, como nome, MAC do dispositivo, IP, horário de uso e login para autenticação, segurança e controle da rede, conforme a Lei Geral de Proteção de Dados (LGPD — Lei nº 13.709/2018).
-            </p>
-            <p>
-                Os dados serão usados apenas internamente e não serão compartilhados com terceiros sem autorização legal.
-            </p>
-            <div class="checkbox-container">
-                <input type="checkbox" id="aceiteTermos">
-                <label for="aceiteTermos">Eu li e concordo com os termos de uso.</label>
+    <main class="centralizador">
+        <div class="login-container">
+            <h2>São José Agroindustrial</h2>
+
+            <div class="aviso-lgpd">
+                <h3><i class="fas fa-shield-alt"></i> Aviso de Uso da Rede Wi-Fi</h3>
+                <p>
+                    Ao clicar em 'Aceitar e Conectar', você concorda com o tratamento de seus dados pessoais, como nome, MAC do dispositivo, IP, horário de uso e login para autenticação, segurança e controle da rede, conforme a Lei Geral de Proteção de Dados (LGPD — Lei nº 13.709/2018).
+                </p>
+                <p>
+                    Os dados serão usados apenas internamente e não serão compartilhados com terceiros sem autorização legal.
+                </p>
+                <div class="checkbox-container">
+                    <input type="checkbox" id="aceiteTermos">
+                    <label for="aceiteTermos">Eu li e concordo com os termos de uso.</label>
+                </div>
             </div>
-        </div>
 
-        <button id="btn-conectar" class="btn-conectar" aria-label="Aceitar os termos e conectar à rede">
-            Aceitar e Conectar
-        </button>
-    </div>
+            <button id="btn-conectar" class="btn-conectar" aria-label="Aceitar os termos e conectar à rede">
+                Aceitar e Conectar
+            </button>
+        </div>
+    </main>
 
     <script>
         const checkbox = document.getElementById('aceiteTermos');
         const btnConectar = document.getElementById('btn-conectar');
 
-        // botão inicia desabilitado
         btnConectar.disabled = true;
 
         checkbox.addEventListener('change', function() {
@@ -53,13 +245,9 @@
             }
         });
 
-        // ação ao clicar no botão
         btnConectar.addEventListener('click', function() {
             if (!btnConectar.disabled) {
-                // redireciona para a página desejada
                 window.location.href = "https://www.saojoseagroindustrial.com.br/";
-                // 👉 se quiser abrir em nova aba, use:
-                // window.open("https://www.seusite.com/pagina-especifica", "_blank");
             }
         });
     </script>
